# scribenet

./: .gitignore  PHASE_2_VALIDATION.md  PHASE_3_CHECKLIST.md  QUICKSTART.md  README.md  SIMPLIFIED_STATUS.md  TECHNICAL_PLAN.md  cli.py  config.yaml  pyproject.toml  pytest.ini  setup.sh
backend/: __init__.py
backend/agents/: __init__.py  base.py  critic.py  director.py  editor.py  outline.py  summarizer.py  writer.py
backend/api/: main.py  models.py  websockets.py
backend/api/routes/: agents.py  chapters.py  chat.py  projects.py
backend/llm/: __init__.py  ollama_client.py
backend/mcp/: __init__.py  client_manager.py  errors.py
backend/mcp/servers/: __init__.py  core_server.py
backend/mcp/tools/: __init__.py  base.py  chapter_tools.py  critique_tools.py  outline_tools.py  project_tools.py  search_tools.py  story_bible_tools.py
backend/memory/: __init__.py  database.py  git_manager.py  vector_store.py
backend/memory/db/: __init__.py  analysis.py  base.py  chat.py  (+3 more)
backend/orchestration/: __init__.py  state.py  workflows.py
backend/utils/: config.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityFeed.tsx  AgentStatusCard.tsx  ChapterGrid.tsx  ChatMessageBubble.tsx  ConfirmModal.tsx  CreateProjectModal.tsx  ExpandableSection.tsx  ScoreDisplay.tsx  ToastContainer.tsx  ToolSelectionModal.tsx
tests/: __init__.py  test_base_tool.py  test_chapter_tools.py  test_critique_tools.py  test_database.py  test_outline_tools.py  test_project_tools.py  test_search_tools.py  test_story_bible_tools.py
(+5 files in other folders)
